manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snap-camera


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: snap-camera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snap-mysql
  template:
    metadata:
      labels:
        app: snap-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: snap-camera
spec:
  selector:
    app: snap-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: snap-camera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snap-webapp
  template:
    metadata:
      labels:
        app: snap-webapp
    spec:
      containers:
        - name: webapp
          image: ghcr.io/lochis/snap-camera-server:sha-a59e74c
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: storage
              mountPath: /var/lib/snapcamera
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: webapp-storage-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: snap-camera
spec:
  selector:
    app: snap-webapp
  ports:
    - name: http
      port: 3000
      targetPort: 3000


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webproxy
  namespace: snap-camera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snap-webproxy
  template:
    metadata:
      labels:
        app: snap-webproxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/templates
            - name: ssl-certs
              mountPath: /etc/ssl
            - name: nginx-media
              mountPath: /usr/share/nginx/html/snap-camera-media
            - name: nginx-categories
              mountPath: /usr/share/nginx/html/snap-camera-categories-media
            - name: storage
              mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: ssl-certs
          secret:
            secretName: ssl-certs
        - name: nginx-media
          emptyDir: {}
        - name: nginx-categories
          emptyDir: {}
        - name: storage
          persistentVolumeClaim:
            claimName: nginx-storage-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: webproxy
  namespace: snap-camera
spec:
  selector:
    app: snap-webproxy
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - name: https
      port: 8443
      targetPort: 8443
      nodePort: 30443


---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: snap-camera
  namespace: snap-camera
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`studio-app.snapchat.com`)
      kind: Rule
      services:
        - name: webproxy
          port: 8080
  tls:
    secretName: ssl-certs
